--- a/angular.json
+++ b/angular.json
@@ -106,15 +106,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular8tutorial:serve"
+            "devServerTarget": "PFEProjects:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angular8tutorial:serve:production"
+              "devServerTarget": "PFEProjects:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "angular8tutorial"
+  "defaultProject": "PFEProjects"
 }
